--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,22 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.ui.account.AccountFragment">
+    android:layout_height="wrap_content"
+    tools:context=".fragment.AccountFragment"
+    android:padding="20dp"
+    android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/text_notifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_img"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription="@string/content_desc_2"
+        android:src="@drawable/profilepic_2"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_name"
+        style="@style/TextAbout.Black"
+        android:layout_marginTop="20dp"
+        tools:text="Nama Dosen"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/profile_img"
+        app:layout_constraintStart_toStartOf="@+id/profile_img"
+        app:layout_constraintTop_toBottomOf="@+id/profile_img" />
+
+    <TextView
+        android:id="@+id/tv_nip"
+        style="@style/TextAbout.Subtitle"
+        android:layout_marginTop="8dp"
+        tools:text="NIP"
+        app:layout_constraintEnd_toEndOf="@+id/tv_name"
+        app:layout_constraintStart_toStartOf="@+id/tv_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+    <Button
+        android:id="@+id/btn_change_pass"
+        style="@style/Button"
+        android:layout_marginTop="40dp"
+        android:text="@string/change_pass"
+        app:layout_constraintEnd_toEndOf="@+id/tv_nip"
+        app:layout_constraintStart_toStartOf="@+id/tv_nip"
+        app:layout_constraintTop_toBottomOf="@+id/tv_nip"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
