--- a/app/src/main/res/layout/locations_list.xml
+++ b/app/src/main/res/layout/locations_list.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_img"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginEnd="16dp"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_width="2dp"
+        android:src="@drawable/profilepic"
+        android:contentDescription="@string/content_desc_2"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/profile_img"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_item_student"
+            style="@style/TextList"
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold"
+            tools:text="Nama Mahasiswa" />
+
+        <TextView
+            android:id="@+id/tv_item_nim"
+            style="@style/TextList"
+            tools:text="NIM" />
+
+    </LinearLayout>
+</RelativeLayout>
