--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#87CEFA</color>
+    <color name="colorPrimaryDark">#00BFFF</color>
+    <color name="colorAccent">#51CBCE</color>
+    <color name="colorSubTitle">#20B2AA</color>
+    <color name="colorCard">#ACE7FF</color>
+    <color name="red">#D30000</color>
 </resources>
