--- a/app/src/main/res/layout/fragment_location_submission.xml
+++ b/app/src/main/res/layout/fragment_location_submission.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="?attr/actionBarSize"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".fragment.LocationSubmissionFragment">
 
     <androidx.recyclerview.widget.RecyclerView
