--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_classroom">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_classroom"
         android:name="com.rahmania.sip_bdr.fragment.ClassroomFragment"
         android:label="@string/menu_1"
         tools:layout="@layout/fragment_classroom" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_location"
         android:name="com.rahmania.sip_bdr.fragment.LocationSubmissionFragment"
         android:label="@string/menu_2"
         tools:layout="@layout/fragment_location_submission" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_account"
         android:name="com.rahmania.sip_bdr.fragment.AccountFragment"
         android:label="@string/menu_3"
         tools:layout="@layout/fragment_account" />
