--- a/app/src/main/res/layout/activity_classroom_detail.xml
+++ b/app/src/main/res/layout/activity_classroom_detail.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.ClassroomDetailActivity">
 
     <LinearLayout
@@ -18,12 +19,12 @@
             style="@style/TextAbout.Black"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
-            android:textSize="26sp"
+            android:textSize="20sp"
             tools:text="Nama Kelas" />
 
         <TextView
             style="@style/TextAbout.Subtitle"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
             android:text="@string/class_description" />
 
@@ -56,6 +57,21 @@
 
                 <TextView
                     style="@style/TextSpec.Field"
+                    android:text="@string/courseCode" />
+
+                <TextView
+                    android:id="@+id/tv_code"
+                    style="@style/TextSpec.Value"
+                    tools:text="TSI 101" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp">
+
+                <TextView
+                    style="@style/TextSpec.Field"
                     android:text="@string/sks" />
 
                 <TextView
@@ -66,45 +82,43 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     style="@style/TextSpec.Field"
-                    android:text="@string/day" />
+                    android:text="@string/schedule" />
 
                 <TextView
-                    android:id="@+id/tv_day"
+                    android:id="@+id/tv_schedule"
                     style="@style/TextSpec.Value"
-                    tools:text="Day" />
+                    tools:text="Monday | 10:00 - 12:00" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+<!--            <TableRow-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
 
-                <TextView
-                    style="@style/TextSpec.Field"
-                    android:text="@string/time" />
+<!--                <TextView-->
+<!--                    style="@style/TextSpec.Field"-->
+<!--                    android:text="@string/time" />-->
 
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/TextSpec.Value"
-                    tools:text="Time - Time" />
-            </TableRow>
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_time"-->
+<!--                    style="@style/TextSpec.Value"-->
+<!--                    tools:text="Time - Time" />-->
+<!--            </TableRow>-->
 
         </TableLayout>
 
         <TextView
             style="@style/TextAbout.Subtitle"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/classmeeting_description" />
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_weight="0.5"
+            android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingTop="5dp">
@@ -122,13 +136,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_plus"
+        android:src="@drawable/ic_calendar_plus"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="24dp"
         app:fabSize="normal"
         app:borderWidth="0dp"
         app:elevation="16dp"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@android:color/white"
         android:id="@+id/fab_createMeeting"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
