--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,30 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".activity.ChangePasswordActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="390dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            app:cardCornerRadius="45dp"
+            android:layout_marginStart="-50dp"
+            app:cardBackgroundColor="@color/colorCard">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="50dp"
+                android:padding="5dp">
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_name"-->
+<!--                    style="@style/TextAbout.Black"-->
+<!--                    android:layout_marginTop="16dp"-->
+<!--                    android:layout_marginBottom="8dp"-->
+<!--                    android:textSize="18sp"-->
+<!--                    tools:text="Nama Dosen" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_nim"-->
+<!--                    style="@style/TextAbout.Black"-->
+<!--                    android:layout_marginBottom="16dp"-->
+<!--                    android:textSize="17sp"-->
+<!--                    tools:text="NIP" />-->
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    tools:ignore="UselessParent">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp">
+
+                        <TextView
+                            style="@style/TextSpec.Field"
+                            android:textStyle="bold"
+                            android:text="@string/name" />
+
+                        <TextView
+                            android:id="@+id/tv_name"
+                            style="@style/TextSpec.Value"
+                            tools:text="Husnil Kamil" />
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp">
+
+                        <TextView
+                            style="@style/TextSpec.Field"
+                            android:textStyle="bold"
+                            android:text="@string/nip2" />
+
+                        <TextView
+                            android:id="@+id/tv_nip"
+                            style="@style/TextSpec.Value"
+                            tools:text="NIP" />
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="16dp">
 
         <EditText
             android:id="@+id/et_old_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:drawableStart="@drawable/ic_key_2"
             android:drawablePadding="18dp"
             android:inputType="textPassword"
@@ -38,6 +115,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:drawableStart="@drawable/ic_key"
             android:drawablePadding="18dp"
             android:inputType="textPassword"
@@ -51,6 +130,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:drawableStart="@drawable/ic_key"
             android:drawablePadding="18dp"
             android:inputType="textPassword"
@@ -73,4 +154,4 @@
             app:layout_constraintVertical_bias="0.2" />
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
