--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -49,4 +49,14 @@
         app:layout_constraintStart_toStartOf="@+id/tv_nip"
         app:layout_constraintTop_toBottomOf="@+id/tv_nip"/>
 
+    <Button
+        android:id="@+id/btn_logout"
+        style="@style/Button"
+        android:backgroundTint="@color/red"
+        android:layout_marginTop="8dp"
+        android:text="@string/logout"
+        app:layout_constraintEnd_toEndOf="@+id/btn_change_pass"
+        app:layout_constraintStart_toStartOf="@+id/btn_change_pass"
+        app:layout_constraintTop_toBottomOf="@+id/btn_change_pass"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
