--- a/app/src/main/res/layout/meetings_list.xml
+++ b/app/src/main/res/layout/meetings_list.xml
@@ -12,14 +12,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="12dp"
         android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:layout_marginBottom="4dp"
+        android:textStyle="bold"
         style="@style/TextSpec.Value"
         tools:text="Pertemuan ke-N"/>
 
@@ -27,7 +28,6 @@
         android:id="@+id/tv_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         style="@style/TextSpec.Value"
         tools:text="Date"/>
 
