--- a/app/src/main/res/layout/students_list.xml
+++ b/app/src/main/res/layout/students_list.xml
@@ -12,34 +12,41 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/tv_name"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_checked"
+            android:layout_gravity="center_vertical"
+            android:elevation="2dp"
+            android:contentDescription="@string/content_desc_attendance"
+            android:id="@+id/iv_status"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textStyle="bold"
-            style="@style/TextSpec.Value"
-            tools:text="Nama Mahasiswa" />
+            android:layout_marginStart="4dp"
+            android:orientation="vertical"
+            android:padding="6dp">
 
-        <TextView
-            android:id="@+id/tv_nim"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            style="@style/TextSpec.Value"
-            tools:text="NIM" />
+            <TextView
+                android:id="@+id/tv_name"
+                style="@style/TextSpec.Value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:textStyle="bold"
+                tools:text="Nama Mahasiswa" />
 
-        <TextView
-            android:id="@+id/tv_presence_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            style="@style/TextSpec.Value"
-            tools:text="Status Kehadiran" />
+            <TextView
+                android:id="@+id/tv_nim"
+                style="@style/TextSpec.Value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="NIM" />
 
+        </LinearLayout>
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
