--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,7 +14,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:contentDescription="@string/content_desc_2"
-        android:src="@drawable/profilepic_2"
+        android:src="@drawable/profilepic"
         app:civ_border_color="@color/colorPrimary"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         style="@style/TextAbout.Black"
         android:layout_marginTop="20dp"
         tools:text="Nama Dosen"
-        android:textSize="26sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/profile_img"
         app:layout_constraintStart_toStartOf="@+id/profile_img"
         app:layout_constraintTop_toBottomOf="@+id/profile_img" />
